Address Sonar warnings